# ChangeLog for games-arcade/gunocide2ex
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/gunocide2ex/ChangeLog,v 1.5 2004/11/02 21:00:21 josejx Exp $

  03 Nov 2004; Joseph Jezak <josejx@gentoo.org> gunocide2ex-1.0.ebuild:
  Added ~ppc.

  26 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> gunocide2ex-1.0.ebuild:
  don't rdepend on sed; tidy

  28 Nov 2003; Michael Sterrett <mr_bones_@gentoo.org> gunocide2ex-1.0.ebuild:
  actually compile; depend on sed-4; more error checking/messages; tidy

*gunocide2ex-1.0 (14 Nov 2003)

  14 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.