@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/gunocide2ex/gunocide2ex-1.0.ebuild,v 1.7 2004/11/02 21:00:21 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/gunocide2ex/gunocide2ex-1.0.ebuild,v 1.8 2004/12/21 14:03:41 josejx Exp $
 
 inherit eutils gcc games
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/g2ex/g2ex-setup.run"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~ppc"
+KEYWORDS="x86 ppc"
 IUSE=""
 
 RDEPEND="media-libs/libsdl
