@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/kajaani-kombat
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/kajaani-kombat/ChangeLog,v 1.4 2004/11/09 06:56:58 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/kajaani-kombat/ChangeLog,v 1.5 2004/12/21 14:06:49 josejx Exp $
+
+  22 Dec 2004; Joseph Jezak <josejx@gentoo.org> kajaani-kombat-0.4.ebuild:
+  Marked ppc stable.
 
   09 Nov 2004; Joseph Jezak <josejx@gentoo.org> +files/0.4-gcc-3.4.patch,
   kajaani-kombat-0.4.ebuild:
