@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/gunocide2ex
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/gunocide2ex/ChangeLog,v 1.5 2004/11/02 21:00:21 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/gunocide2ex/ChangeLog,v 1.6 2004/12/21 14:03:41 josejx Exp $
+
+  22 Dec 2004; Joseph Jezak <josejx@gentoo.org> gunocide2ex-1.0.ebuild:
+  Marked ppc stable.
 
   03 Nov 2004; Joseph Jezak <josejx@gentoo.org> gunocide2ex-1.0.ebuild:
   Added ~ppc.
